# Betriebssystem-Entwicklung

./: .gitignore  Hinweise zum Bauen und Ausfuehren des Betriebssystems.md  README.md  Requirements.md
Aufgaben & Vorlagen/vorgabe05/os/: Cargo.toml  Makefile.toml
Aufgaben & Vorlagen/vorgabe05/os/src/: consts.rs  startup.rs
Aufgaben & Vorlagen/vorgabe06/src/os/: Cargo.toml  startup.rs
Betriebssystem Source-Code/: ByteOS.json  ByteOS_usrlib.json  Cargo.toml  Fragen.md  Makefile.toml  Makefiletoml.toml  gdbcommands  hello.txt  hello_dump_dev.txt  hello_dump_prod.txt
Betriebssystem Source-Code/Bildconverter/: PictureConverter.py
Betriebssystem Source-Code/Bildconverter/Bilder/ghost/: ghost00.rs  ghost04.rs
Betriebssystem Source-Code/Bilder/: Converter  CrumpyCat.c  Doge.c  PictureConverter.py  bitmapConverter.c  bitmapConverter.h  cbmp2rs.c  default_pic.c  default_pic.rs
Betriebssystem Source-Code/Helper Programms/Bildconverter/: CrumpyCat.rs  MethodGenerator.py  PictureConverter.py
Betriebssystem Source-Code/Helper Programms/Bildconverter/Bilder/: Doge.rs  cutecat.rs
Betriebssystem Source-Code/Helper Programms/Midi-Converter/: Converterskript.py  func_to_notes.py
Betriebssystem Source-Code/Helper Programms/Midi-Converter/Functionconverter/: AerodynamicFunction.txt  AerodynamicSlice.txt  DoomFunction.txt  DoomSlice.txt  EntchenFunction.txt  EntchenSlice.txt  MarioFunction.txt  MarioSlice.txt  StarwarsImperialFunction.txt  StarwarsImperialSlice.txt  TetrisFunction.txt  TetrisSlice.txt
Betriebssystem Source-Code/Helper Programms/Midi-Converter/MidiOutput/: NyanCatSlice.txt  Testoutput1.txt
Betriebssystem Source-Code/Helper Programms/Midi-Converter/Midifiles/: intro.mid
Betriebssystem Source-Code/Midi-Converter/: Converterskript.py
Betriebssystem Source-Code/Midi-Converter/MidiOutput/: Doom.txt  Imperial-March.txt  Mario.txt
Betriebssystem Source-Code/Midi-Converter/Midifiles/: Mario.mid  Testfile1.mid
Betriebssystem Source-Code/apps/animation/: Cargo.toml  Makefile.toml  linker.x86_64-elf-ld
Betriebssystem Source-Code/apps/animation/src/: main.rs
Betriebssystem Source-Code/apps/apps/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/apps/src/: main.rs
Betriebssystem Source-Code/apps/calc/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/calc/src/: main.rs
Betriebssystem Source-Code/apps/datetime/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/datetime/src/: main.rs
Betriebssystem Source-Code/apps/echo/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/echo/src/: main.rs
Betriebssystem Source-Code/apps/engineturtel/: Cargo.toml
Betriebssystem Source-Code/apps/engineturtel/src/: main.rs
Betriebssystem Source-Code/apps/extracounter/: Cargo.toml  Makefile.toml  linker.x86_64-elf-ld
Betriebssystem Source-Code/apps/extracounter/src/: main.rs
Betriebssystem Source-Code/apps/hello/: Cargo.toml  Makefile.toml  linker.x86_64-elf-ld
Betriebssystem Source-Code/apps/hello/src/: main.rs
Betriebssystem Source-Code/apps/help/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/help/src/: main.rs
Betriebssystem Source-Code/apps/keycatcher/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/keycatcher/src/: main.rs
Betriebssystem Source-Code/apps/kill/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/kill/src/: main.rs
Betriebssystem Source-Code/apps/mandelbrot/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/mandelbrot/src/: main.rs
Betriebssystem Source-Code/apps/music/: Cargo.toml  Makefile.toml  linker.x86_64-elf-ld
Betriebssystem Source-Code/apps/music/src/: main.rs
Betriebssystem Source-Code/apps/picture/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/picture/src/: main.rs
Betriebssystem Source-Code/apps/pong/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/pong/src/: ball.rs  enemy.rs  main.rs  score.rs  sounds.rs  startup.rs
Betriebssystem Source-Code/apps/threads/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/threads/src/: main.rs
Betriebssystem Source-Code/apps/tictactoe/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/tictactoe/src/: main.rs
Betriebssystem Source-Code/apps/turtel/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/turtel/src/: main.rs
Betriebssystem Source-Code/apps/uptime/: Cargo.toml  Makefile.toml
Betriebssystem Source-Code/apps/uptime/src/: main.rs
Betriebssystem Source-Code/loader/: appLinker.x86_64-elf-ld
Betriebssystem Source-Code/loader/isofiles/: hello.elf
Betriebssystem Source-Code/os/: Cargo.toml  Makefile.toml  linker.x86_64-elf-ld
Betriebssystem Source-Code/os/src/: consts.rs  startup.rs
Betriebssystem Source-Code/os/src/boot/: appregion.rs  boot.asm  mod.rs  multiboot.rs
Betriebssystem Source-Code/os/src/devices/: cga.rs  cga_print.rs  key.rs  keyboard.rs  kprint.rs  mod.rs  pcspk.rs  pit.rs  rtc.rs  serial.rs  vga.rs
Betriebssystem Source-Code/os/src/kernel/: allocator.rs  cpu.rs  logger.rs  mod.rs
Betriebssystem Source-Code/os/src/mylib/: delay.rs  queue.rs
Betriebssystem Source-Code/os/src/testing/: mod.rs
Betriebssystem Source-Code/os/src/utility/: delay.rs  mod.rs
Betriebssystem Source-Code/src/: consts.rs  startup.rs
Betriebssystem Source-Code/src/boot/: boot.asm
Betriebssystem Source-Code/src/devices/: cga.rs  cga_print.rs  keyboard.rs  kprint.rs  mod.rs  pcspk.rs  pit.rs  rtc.rs  vga.rs
Betriebssystem Source-Code/src/kernel/: allocator.rs  cpu.rs  mod.rs  stack.rs
Betriebssystem Source-Code/src/kernel/allocator/: bump.rs  list.rs
Betriebssystem Source-Code/src/kernel/corouts/: coroutine.asm  coroutine.rs
Betriebssystem Source-Code/src/kernel/interrupts/: intdispatcher.rs  interrupts.asm  (+2 more)
Betriebssystem Source-Code/src/mylib/: input.rs  mod.rs  mutex.rs  queue.rs
Betriebssystem Source-Code/src/user/: hello_world_thread.rs  mod.rs
Betriebssystem Source-Code/usrlib/: Cargo.toml
Betriebssystem Source-Code/usrlib/src/: lib.rs
Betriebssystem Source-Code/usrlib_depricated/src/: lib.rs
(+483 files in other folders)
