[package]
edition = "2018"
name = "ByteOS_kernel"
version = "0.1.1"
authors = [
    "Michael Schöttner <michael.schoettner@hhu.de>",
    "Carsten Krollmann <cakro105@hhu.de>",
]

[lib]
crate-type = ["staticlib"]
path = "src/startup.rs"
test = false

[dependencies]
spin = "0.9.8"
x86_64 = "0.15.2"
bitflags = "1.3.2"
log = "0.4.20"
tar-no-std = { git = "https://github.com/schnoberts1/tar-no-std", branch = "add-support-for-non-null-terminated-strings-and-256-length-filenames" }
usrlib = { git = "https://github.com/StellarByteStudios/hhuTOSuserlib", branch = "improvement-environment", default-features = false}

[profile.development]
panic = "abort"

[profile.production]
panic = "abort"
