[package]
name = "usrlib"
version = "0.1.0"
edition = "2021"
authors = [
    "Michael Schöttner <michael.schoettner@hhu.de>",
    "Carsten Krollmann <cakro105@hhu.de>",
]

#[lib]
#crate-type = ["staticlib"]
#path = "src/lib.rs"
#test = false

[dependencies]
spin = "0.9.8"
bitflags = "1.3.2"
x86 = "0.52.0"
