[package]
edition = "2018"
name = "ByteOS_hello"
version = "0.1.1"
authors = [
    "Michael Schöttner <michael.schoettner@hhu.de>",
    "Carsten Krollmann <cakro105@hhu.de>",
]

[lib]
crate-type = ["staticlib"]
path = "src/main.rs"

#[dependencies]
#spin = "0.9.8"
#x86_64 = "0.14.2"
#nolock = { version = "0.4.1", default-features = false, features = ["queues"] }
#bitflags = "1.3.2"
#x86 = "0.52.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[profile.development]
panic = "abort"

[profile.production]
panic = "abort"
