[package]
edition = "2018"
name = "os"
version = "0.1.0"
authors = ["Michael Schöttner <michael.schoettner@hhu.de>"]

[lib]
crate-type = ["staticlib"]
path = "src/startup.rs"

[dependencies]
spin = "0.9.8"
nolock = { version = "0.4.1", default-features = false, features = ["queues"] }
x86 = "0.52.0"
bitflags = "1.3.2"
usrlib = { path = "../usrlib" }
log = "0.4.20"
tar-no-std = { git = "https://github.com/schnoberts1/tar-no-std", branch = "add-support-for-non-null-terminated-strings-and-256-length-filenames" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

